# second-service

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
